# data-engineering-test

./: .gitignore  README.md
resources/: orders.csv
solution/: .coverage  README.md  docker-compose.yml  dockerfile  pyproject.toml
solution/init-scripts/: create_invoicing_data_table.sql  create_orders_table.sql
solution/notebooks/: notebook_task_1_analysis.ipynb  notebook_task_2_analysis.ipynb  notebook_task_3_analysis.ipynb  notebook_task_4_analysis.ipynb  notebook_task_5_analysis.ipynb
solution/notebooks/.ipynb_checkpoints/: notebook_task_1_analysis-checkpoint.ipynb
solution/src/: task_1_crate_distribution.py  task_2_contact_fullname.py  task_3_contact_address.py  task_5_sales_owners.py  utils.py
solution/src/.ipynb_checkpoints/: task_1_crate_distribution-checkpoint.py  test_2_contact_fullname-checkpoint.py
solution/src/task_4/: load_data.py  task_4_comissions.py
solution/src/task_4/dbt/: .user.yml  dbt_project.yml  profiles.yml
solution/src/task_4/dbt/models/: calculate_comissions.sql
solution/tests/: test_1_crate_distribution.py  test_2_contact_fullname.py  test_3_contact_address.py  test_4_comissions.py  test_5_sales_owners.py  utils.py
solution/tests/.ipynb_checkpoints/: test_1_crate_distribution-checkpoint.py
solution/tests/resources/: invalid_row_sample.csv  invalid_sep_sample.csv  missing_columns_sample.csv  missing_columns_sample.json  sample.csv  sample.json  unexpected_columns_sample.csv  unexpected_columns_sample.json
